# wosa

./: Nebelfiller.glade  README.md  Wosa.cabal
src/: Main.hs  Nebelfiller.hs  Utilities.hs  Wosa.hs
src/Nebelfiller/: Datatypes.hs  GUIHelpers.hs  Parser.hs  Utilities.hs
