name:                Wosa
version:             0.1.0.0
synopsis:            WordSet Assembler
description:         Please see README.md
homepage:            http://github.com/mtesseract/wosa#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Schulte
maintainer:          mtesseract@silverratio.net
copyright:           value
category:            value
build-type:          Simple
cabal-version:       >=1.10
Data-Files:
    Nebelfiller.glade

executable wosa
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -XTemplateHaskell -Wall -O3
  other-modules:       Wosa, Utilities, Paths_Wosa,
                       Nebelfiller, Nebelfiller.Datatypes, Nebelfiller.GUIHelpers, Nebelfiller.Parser,
                       Nebelfiller.Utilities
  build-depends:       base >= 4.7 && < 5,
                       MissingH,
                       gtk,
                       glib,
                       containers,
                       base,
                       mtl,
                       cassava,
                       vector,
                       bytestring,
                       transformers,
                       text,
                       split,
                       random,
                       loch-th
